--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Video Speed Controller",
-  "short_name": "videospeed",
+  "name": "Video Speed Controller Experimental",
+  "short_name": "videospeed-experimental",
   "version": "0.6.0",
   "manifest_version": 2,
-  "description": "Speed up, slow down, advance and rewind any HTML5 video with quick shortcuts.",
-  "homepage_url": "https://github.com/igrigorik/videospeed",
+  "description": "Experimental version of Video Speed Controller",
+  "homepage_url": "https://github.com/ChadBailey/Video-Speed-Controller-Experimental",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
